--- a/server/src/server/static/index.html
+++ b/server/src/server/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>채팅 애플리케이션</title>
     <style>
+        /* 기본 스타일 리셋 및 전역 설정 */
         * {
             margin: 0;
             padding: 0;
@@ -20,6 +21,7 @@
             flex-direction: column;
         }
 
+        /* 헤더 스타일 */
         .header {
             background-color: #4a6fa5;
             color: white;
@@ -28,20 +30,34 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
+        /* 메인 컨테이너 레이아웃 */
         .main-container {
             display: flex;
             flex: 1;
             overflow: hidden;
         }
 
+        /* 좌측 채팅 컨테이너 */
         .chat-container {
-            flex: 7;
+            flex: 4;
             display: flex;
             flex-direction: column;
             border-right: 1px solid #e0e0e0;
             background-color: white;
         }
 
+        /* 중앙 이미지 컨테이너 */
+        .scenario-container {
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            background-color: #f9fafc;
+            padding: 1rem;
+            overflow-y: auto;
+            border-right: 1px solid #e0e0e0;
+        }
+
+        /* 우측 패널 */
         .right-panel {
             flex: 3;
             display: flex;
@@ -51,15 +67,19 @@
             overflow-y: auto;
         }
 
+        /* 채팅 메시지 영역 */
         .chat-messages {
             flex: 1;
             padding: 1rem;
+            padding-top: 4rem;
+            padding-bottom: 4rem;
             overflow-y: auto;
             display: flex;
             flex-direction: column;
             gap: 1rem;
         }
 
+        /* 메시지 스타일 */
         .message {
             display: flex;
             margin-bottom: 1rem;
@@ -78,6 +98,7 @@
             }
         }
 
+        /* 아바타 스타일 */
         .avatar {
             width: 40px;
             height: 40px;
@@ -98,11 +119,12 @@
             background-color: #6c8eb4;
         }
 
+        /* 메시지 내용 스타일 */
         .message-content {
             max-width: 70%;
             padding: 10px 15px;
             border-radius: 15px;
-            font-size: 0.95rem;
+            font-size: 1.2rem;
             line-height: 1.4;
         }
 
@@ -129,6 +151,7 @@
             text-align: right;
         }
 
+        /* 채팅 입력 영역 */
         .chat-input-container {
             display: flex;
             padding: 1rem;
@@ -172,6 +195,7 @@
             height: 20px;
         }
 
+        /* 패널 섹션 공통 스타일 */
         .panel-section {
             margin-bottom: 2rem;
         }
@@ -191,6 +215,8 @@
             margin-right: 8px;
         }
 
+        /* 미션 및 제안 카드 스타일 */
+        .scenario-card,
         .mission-card,
         .suggestion-card {
             background-color: white;
@@ -202,10 +228,15 @@
             cursor: pointer;
         }
 
+        .scenario-card:hover,
         .mission-card:hover,
         .suggestion-card:hover {
             transform: translateY(-3px);
             box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .scenario-card {
+            border-top: 4px solid #9f8872;
         }
 
         .mission-card {
@@ -216,6 +247,8 @@
             border-left: 4px solid #66bb6a;
         }
 
+
+        .scenario-title,
         .mission-title,
         .suggestion-title {
             font-weight: 600;
@@ -223,12 +256,14 @@
             color: #2c3e50;
         }
 
+        .scenario-desc,
         .mission-desc,
         .suggestion-desc {
             font-size: 0.9rem;
             color: #7f8c8d;
         }
 
+        /* 미션 상태 및 진행률 스타일 */
         .mission-status {
             display: flex;
             justify-content: space-between;
@@ -259,6 +294,7 @@
             border-radius: 3px;
         }
 
+        /* 태그 스타일 */
         .tag {
             padding: 3px 8px;
             border-radius: 12px;
@@ -271,6 +307,7 @@
             margin-right: 5px;
         }
 
+        /* 타이핑 표시기 스타일 */
         .typing-indicator {
             display: flex;
             padding: 10px 15px;
@@ -311,25 +348,182 @@
             }
         }
 
+        /* 이미지 컨테이너 스타일 */
+        .image-content {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            padding-bottom: 2rem;
+            padding-top: 2rem;
+        }
+
+        .image-placeholder {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            height: 100%;
+            color: #95a5a6;
+            padding: 2rem;
+        }
+
+        .image-card {
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+            transition: transform 0.2s, box-shadow 0.2s;
+            cursor: pointer;
+        }
+
+        .image-card:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .image-title {
+            font-weight: 600;
+            padding: 12px 15px;
+            color: #2c3e50;
+            border-bottom: 1px solid #ecf0f1;
+        }
+
+        .image-wrapper {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            background-color: #f9f9f9;
+        }
+
+        .image-wrapper img {
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
+        }
+
+        .image-desc {
+            padding: 12px 15px;
+            font-size: 0.9rem;
+            color: #7f8c8d;
+            border-top: 1px solid #ecf0f1;
+        }
+
+        /* 전체화면 이미지 오버레이 */
+        .fullscreen-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        .fullscreen-content {
+            max-width: 90%;
+            max-height: 90%;
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .fullscreen-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            border-bottom: 1px solid #ecf0f1;
+        }
+
+        .fullscreen-title {
+            font-weight: 600;
+            color: #2c3e50;
+        }
+
+        .close-button {
+            background: none;
+            border: none;
+            font-size: 1.5rem;
+            cursor: pointer;
+            color: #7f8c8d;
+        }
+
+        .fullscreen-body {
+            overflow: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f9f9f9;
+            padding: 20px;
+        }
+
+        .fullscreen-body img {
+            max-width: 100%;
+            max-height: 70vh;
+            object-fit: contain;
+        }
+
+        .fullscreen-footer {
+            padding: 15px;
+            color: #7f8c8d;
+            border-top: 1px solid #ecf0f1;
+        }
+
+        /* 반응형 스타일 */
+        @media (max-width: 1200px) {
+            .main-container {
+                flex-direction: column;
+            }
+
+            .chat-container {
+                flex: none;
+                height: 50vh;
+            }
+
+            .scenario-container,
+            .right-panel {
+                flex: none;
+                height: 25vh;
+                border-top: 1px solid #e0e0e0;
+                border-left: none;
+            }
+
+            .scenario-container {
+                border-right: none;
+            }
+        }
+
         @media (max-width: 768px) {
             .main-container {
                 flex-direction: column;
             }
 
             .chat-container,
+            .scenario-container,
             .right-panel {
                 flex: none;
                 width: 100%;
             }
 
             .chat-container {
-                height: 60vh;
+                height: 50vh;
+            }
+
+            .scenario-container {
+                height: 25vh;
+                border-top: 1px solid #e0e0e0;
+                border-right: none;
             }
 
             .right-panel {
-                height: 40vh;
+                height: 25vh;
                 border-top: 1px solid #e0e0e0;
-                border-left: none;
             }
         }
     </style>
@@ -341,6 +535,29 @@
     </header>
 
     <div class="main-container">
+        <!-- 새로 추가된 중앙 이미지 컨테이너 -->
+        <div class="scenario-container" id="scenarioContainer">
+            <div class="panel-title">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                    <circle cx="8.5" cy="8.5" r="1.5"></circle>
+                    <polyline points="21 15 16 10 5 21"></polyline>
+                </svg>
+                Scenario
+            </div>
+            <div class="scenario-list" id="scenarioList">
+                <!-- Scenario will be added dynamically -->
+            </div>
+            <div class="image-content" id="imageContent">
+                <!-- 이미지가 동적으로 추가될 영역 -->
+                <div class="image-placeholder">
+                    <p>아직 표시할 이미지가 없습니다.</p>
+                    <p>대화에서 이미지가 생성되면 여기에 표시됩니다.</p>
+                </div>
+            </div>
+        </div>
+        <!-- 좌측 채팅 컨테이너 -->
         <div class="chat-container">
             <div class="chat-messages" id="chatMessages">
                 <!-- Messages will be added dynamically -->
@@ -358,6 +575,7 @@
             </div>
         </div>
 
+        <!-- 우측 패널 -->
         <div class="right-panel">
             <div class="panel-section missions-container">
                 <div class="panel-title">
@@ -402,9 +620,10 @@
             const chatMessages = document.getElementById('chatMessages');
             const messageInput = document.getElementById('messageInput');
             const sendButton = document.getElementById('sendButton');
+            const scenarioList = document.getElementById('scenarioList');
             const missionsList = document.getElementById('missionsList');
             const suggestionsList = document.getElementById('suggestionsList');
-
+            const imageContent = document.getElementById('imageContent');
             // Sample data for missions
             const missions = [
                 {
@@ -452,19 +671,45 @@
                 }
             ];
 
+            // Sample images data
+            const sampleImages = [
+                {
+                    id: 1,
+                    title: "Make your own scenario",
+                    src: "/placeholder.jpg",
+                    description: ""
+                }
+            ];
+
+            // Sample images data
+            const sampleScenarios = [
+                {
+                    id: 1,
+                    title: "Situation",
+                    description: ""
+                },
+                {
+                    id: 2,
+                    title: "Your Role",
+                    description: ""
+                }
+            ];
+
             // Sample conversations
             const sampleConversations = [
                 {
                     sender: 'bot',
-                    content: '안녕하세요! 무엇을 도와드릴까요?',
+                    content: '안녕하세요! 시나리오를 먼저 만들어주세요.',
                     time: getCurrentTime()
                 }
             ];
 
             // Initialize chat and panels
             initializeChat();
+            initializeScenarios();
             initializeMissions();
             initializeSuggestions();
+            initializeImages();
 
             // Event listeners
             messageInput.addEventListener('keydown', function (e) {
@@ -486,6 +731,19 @@
             function initializeChat() {
                 sampleConversations.forEach(msg => {
                     addMessage(msg.sender, msg.content, msg.time);
+                });
+            }
+
+            // Initialize scenario panel
+            function initializeScenarios() {
+                sampleScenarios.forEach(scenario => {
+                    const scenarioCard = document.createElement('div');
+                    scenarioCard.className = 'scenario-card';
+                    scenarioCard.innerHTML = `
+                        <div class="scenario-title">${scenario.title}</div>
+                        <div class="scenario-desc">${scenario.description}</div>
+                    `;
+                    scenarioList.appendChild(scenarioCard);
                 });
             }
 
@@ -531,6 +789,99 @@
                     });
                     suggestionsList.appendChild(suggestionCard);
                 });
+            }
+
+            // Initialize images panel
+            function initializeImages() {
+                if (sampleImages.length > 0) {
+                    imageContent.innerHTML = ''; // 기존 자리표시자 제거
+
+                    sampleImages.forEach(image => {
+                        const imageCard = document.createElement('div');
+                        imageCard.className = 'image-card';
+                        imageCard.innerHTML = `
+                            <div class="image-title">${image.title}</div>
+                            <div class="image-wrapper">
+                                <img src="${image.src}" alt="${image.description}" />
+                            </div>
+                            <div class="image-desc">${image.description}</div>
+                        `;
+
+                        // 이미지 클릭 시 전체 화면으로 보기
+                        imageCard.addEventListener('click', () => {
+                            displayFullScreenImage(image);
+                        });
+
+                        imageContent.appendChild(imageCard);
+                    });
+                }
+            }
+
+            // 이미지를 전체 화면으로 표시
+            function displayFullScreenImage(image) {
+                const overlay = document.createElement('div');
+                overlay.className = 'fullscreen-overlay';
+                overlay.innerHTML = `
+                    <div class="fullscreen-content">
+                        <div class="fullscreen-header">
+                            <div class="fullscreen-title">${image.title}</div>
+                            <button class="close-button">×</button>
+                        </div>
+                        <div class="fullscreen-body">
+                            <img src="${image.src}" alt="${image.description}" />
+                        </div>
+                        <div class="fullscreen-footer">${image.description}</div>
+                    </div>
+                `;
+
+                document.body.appendChild(overlay);
+
+                // 닫기 버튼 이벤트
+                overlay.querySelector('.close-button').addEventListener('click', () => {
+                    document.body.removeChild(overlay);
+                });
+
+                // 오버레이 배경 클릭 시 닫기
+                overlay.addEventListener('click', (e) => {
+                    if (e.target === overlay) {
+                        document.body.removeChild(overlay);
+                    }
+                });
+            }
+
+            // 채팅에서 이미지 생성 및 추가
+            function addImageFromChat(title, description) {
+                const newImage = {
+                    id: Date.now(),
+                    title: title,
+                    src: `/api/placeholder/300/200?text=${encodeURIComponent(title)}`,
+                    description: description
+                };
+
+                const imageCard = document.createElement('div');
+                imageCard.className = 'image-card';
+                imageCard.innerHTML = `
+                    <div class="image-title">${newImage.title}</div>
+                    <div class="image-wrapper">
+                        <img src="${newImage.src}" alt="${newImage.description}" />
+                    </div>
+                    <div class="image-desc">${newImage.description}</div>
+                `;
+
+                // 이미지 클릭 시 전체 화면으로 보기
+                imageCard.addEventListener('click', () => {
+                    displayFullScreenImage(newImage);
+                });
+
+                // 자리표시자가 있는 경우 제거
+                if (document.querySelector('.image-placeholder')) {
+                    imageContent.innerHTML = '';
+                }
+
+                imageContent.appendChild(imageCard);
+
+                // 이미지 추가 메시지
+                addMessage('bot', `이미지가 생성되었습니다: ${title}`, getCurrentTime());
             }
 
             // Send message function
