--- a/app/src/static/index.html
+++ b/app/src/static/index.html
@@ -100,7 +100,7 @@
         .chat-area {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 20px;
+            padding: 40px 20px 20px 20px;
             display: flex;
             flex-direction: column;
         }
