--- a/app/src/static/directing.html
+++ b/app/src/static/directing.html
@@ -288,6 +288,8 @@
             border-bottom-left-radius: 5px;
             margin-bottom: 10px;
             width: fit-content;
+            font-weight: 300;
+            font-size: 14px;
         }
 
         .typing-indicator span {
